plugins {
    id 'java'
    id 'war'
}

apply from: 'script.gradle'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = 11
    targetCompatibility = 11
}

dependencies {
    compileOnly "jakarta.servlet:jakarta.servlet-api:5.0.0"
    implementation ("org.springframework:spring-webmvc:5.3.23")
}

jar {
    def jars = configurations.runtimeClasspath.files.collect { "lib/$it.name" }
    manifest {
        attributes 'Main-Class': 'com.art.HelloWorld'
        attributes 'Class-Path': jars.join(' ')
    }
//    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
//    from (configurations.runtimeClasspath.files.collect{project.zipTree(it)})
}

task copyAllDependencies(type: Copy) {
    from(configurations.runtimeClasspath.files)
    into("$buildDir/libs/lib")
}

jar.dependsOn copyAllDependencies

class CustomPlugin implements Plugin<Project> {

    @Override
    void apply(Project project) {
        addHelloTask(project)
    }

    void addHelloTask (Project project) {
        def map = [description: "Hello task", group: "dmdev", type: DefaultTask]
        project.task(map, "hello") {
            println "Configuration task 'hello'"

            doLast {
                println "execution phase, Action1"
            }

            doFirst {
                println "execution phase, Action2"
            }
            doLast {
                println "execution phase, Action3"
            }
            println "task: $description, group: $group, actions: ${actions.size()}"
            // где наша таска лежит, в каком проекте
            println "path task: $path"
        }
    }
}